cabal-version: 3.4

name: lehavre
version: 0

executable lehavre
  build-depends:
    base,
  default-extensions:
    BlockArguments
    DerivingStrategies
    LambdaCase
    TypeApplications
    ScopedTypeVariables
    OverloadedLabels
  default-language: Haskell2010
  ghc-options: -Wall
  main-is: Main.hs
  other-modules:
