cabal-version: 3.4

name: lehavre
version: 0

executable lehavre
  build-depends:
    base,
    text,
    mtl,
  default-extensions:
    BlockArguments
    DerivingStrategies
    LambdaCase
    TypeApplications
    ScopedTypeVariables
    OverloadedLabels
    OverloadedStrings
    TupleSections
  default-language: Haskell2010
  ghc-options: -Wall
  main-is: Main.hs
  other-modules:
    Game
    Player
    Building
    RiverSpace
